--- a/style.css
+++ b/style.css
@@ -12,32 +12,304 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f5f5f5;
-    font-family: 'Merriweather', serif;
+    font-family: "Raleway", serif;
     font-size: 16px;
     line-height: 1.6;
 }
-
-
-/* HLAVICKA */
-
-.titulek {
-    font-family: 'Raleway', serif;
+body a{
+    color:rgb(202, 199, 199); ;
 }
 
+/* HLAVICKA */
+.hlavicka {
+    display: flex;
+    background-image: url(images/island-hlavicka.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    max-width: max-content;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    padding: 20px;
+    text-align: center;
+    position: relative;
+}
+.hlavicka::before {
+    position: absolute;
+    background-color: rgba(0,0,0,0.3);
+    content:"";
+    top:0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+
+.titulek {
+    color: #ffff;  
+    position: relative;
+}
+.perex{
+    color: #f5f5f5;
+    position: relative;
+
+}
+.autor{
+    color: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-style:italic;
+}
+.autor::before{
+    content: '';
+    align-self: center;
+    width: 50%;
+    border-bottom: 3px solid;
+    margin-bottom: 10px;}
 
 /* MENU */
-
-
-
+.menu li {
+     list-style: none;
+     text-align: center;
+    
+}
+.menu a{
+    display: block;
+    text-decoration: none;
+    text-transform: uppercase; 
+    border-bottom: solid 2px  rgb(233, 230, 230);  
+}
+.menu {
+    padding: 20px;
+    margin: 0;
+}
 
 /* OBSAH */
 
+.main p {
+    padding: 10px 15px;
+    margin:0;
+}
+.main img{
+    width: 100%;
+    display: block;
+    margin-top: 15px;
+}
+ .popisek {
+    text-align: center;
+    color: rgb(202, 199, 199);
+    font-size: 10px;
+}
 
+h2{
+    margin-left: 15px;  
+    margin-top: 1.5rem; 
+    display: flex;
+    flex-direction: column;
+    
+}
+h2::after{
+    content: '';
+    height: 0.2rem;
+    width: 15%;
+    border-bottom: 5px solid rgb(60, 42, 177);
+    margin-top: 15px;
+    margin-left: -15px;
+
+}
 
 
 /* FOTOGALERIE */
+.galerie{
+    display: flex;
+    flex-direction: column;
+}
 
+.foto {
+    min-width: 100%;
+    margin: 0;
+}
 
-
+.foto .popisek {
+    font-weight: 700;
+    text-align: center;
+    font-size: 12px;
+    display:block;
+    line-height:1.2;
+    color: slategray;
+}
+.popisek-copy{
+    margin-top: 0;
+    font-size: 10px;
+    color: rgb(202, 199, 199)
+}
 
 /* PATICKA */
+.footer{
+ background: linear-gradient( rgb(226, 224, 224),#f5f5f5);
+}
+.footer p{
+    text-shadow: snow;
+    color:rgb(202, 199, 199) ;
+    line-height: 1.2;
+    font-size: 12px;
+
+}
+
+@media (min-width: 500px) {
+   
+
+    .menu {
+        display:flex;
+        justify-content: space-evenly; 
+        border-top: 1px solid  rgb(202, 199, 199);
+        border-bottom: 1px solid  rgb(202, 199, 199);
+        margin:40px 20px;
+        padding: 0em;
+
+    }
+    .menu li{
+        display:inline-block;
+        flex-wrap: wrap;
+        width: calc(1/4 * 100%);
+        align-items: center;  
+
+    }
+
+    .menu a {
+        border-bottom: none;
+        display: block;
+         padding:20px
+        width: max-content;    
+
+    }
+    .co{
+        border-left: 1px solid  rgb(202, 199, 199);
+        border-right: 1px solid  rgb(202, 199, 199);
+    }
+    .proc{
+        border-left: 1px solid  rgb(202, 199, 199);
+    }
+    .mainfoto{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .popisek{
+        position: absolute;
+        bottom: 0;
+        align-self: flex-end;
+        color: white;
+        font-size: 12px;
+       
+    }
+
+    .popisek a {
+        color: white;
+    }
+
+     .galerie {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    } 
+    .foto{
+        display: contents;
+    }
+   .foto img{
+        margin:0;
+        max-width: 50%;
+    } 
+    .foto .popisek{
+        display: none;
+    }
+
+   
+
+     h2 {
+        font-size: 2rem;
+    }
+
+    .titulek{
+        font-size: 2.5rem;
+    }
+    .footer{
+        margin-top: 0;
+        padding-top: 20px;
+        padding: 20px;
+    }
+    
+      
+}
+
+@media  (min-width: 1000px) {
+    .hlavicka{
+        padding: 100px 300px; 
+        position: relative;
+    }
+  
+    .main {
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+        width: 960px;
+        margin: auto;
+        position: relative;
+    }
+
+    .odstavec1{
+        display: flex;
+        margin-top: -80px;
+        background-color: white;
+       
+     }
+
+     .uvod {
+        display: block;
+        padding: 40px; 
+
+    }
+  
+    .menu {
+        float: left;
+        display: flex; 
+        flex-direction: column;
+        border: none;
+        justify-content: stretch;
+        margin:0;
+        padding:40px;
+
+     }
+     .menu a {
+         padding: 5px;
+         width: max-content;
+     }
+
+   .menu li {
+       display:inline-block;
+       border:none;
+       width:100%; 
+       text-align: left;
+       border-bottom: solid 1px  rgb(233, 230, 230);  
+   }
+   .tproc{
+    padding: 40px 250px 40px  40px ;
+   }
+   .tco{
+       padding: 40px 40px 40px 250px;
+   }
+   
+
+   .main img{
+       margin-top: 0;
+   }
+
+    .foto  img {
+       max-width:33.33%;
+    }
+
+
+    
+}
